add comment for cherry pick

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <!-- Comment out HTML for more information-->
+    <!-- Comment out HTML for more information using for cherry pick-->
     <div id="root"></div>
 </body>
 
