add comment out for rebasing

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 <body>
     <!-- Comment out HTML for more information-->
     <!-- Comment out HTML for more information using for cherry pick-->
+
+    <!-- Add comment out later for rebasing-->
     <div id="root"></div>
 </body>
 
