add html element

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <!-- Add comment out later for rebasing 2-->
     <!-- Add comment out later for rebasing 3-->
     <div id="root"></div>
+    <h1>HTML Adding</h1>
 </body>
 
 </html>
