--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./build/index.bundle.js"></script>
-    <title>Webpack tutorial</title>
+    <title>Webpack tutorial 2</title>
 </head>
 
 <body>
