--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 <body>
     <!-- comment out 1-->
     <!-- comment out 2-->
+    <!-- comment out 3-->
     <div id="root"></div>
 </body>
 </html>
